# FFmpegDemo

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/libs/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/libs/x86/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/libs/x86_64/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/: CMakeLists.txt
app/src/androidTest/java/com/jqk/ffmpegdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpeg_hello.c
app/src/main/java/com/jqk/ffmpegdemo/: FFmpegHello.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/jqk/ffmpegdemo/: ExampleUnitTest.kt
build-script/: build_fdkaac.sh  build_ffmpeg.sh  build_ffmpeg_with_x264_fdkaac.sh  build_ffmpeg_with_x264_fdkaac_all.sh  config.sh
ffmpeg_cmd/: CMakeLists.txt  build.gradle
ffmpeg_cmd/src/androidTest/java/com/jqk/ffmpeg_cmd/: ExampleInstrumentedTest.kt
ffmpeg_cmd/src/main/: AndroidManifest.xml
ffmpeg_cmd/src/main/cpp/: ffmpeg_cmd.c  ffmpeg_cmd.h
ffmpeg_cmd/src/main/cpp/ffmpeg/: cmdutils.c  config.h  ffmpeg.c  ffmpeg_filter.c  ffmpeg_opt.c
ffmpeg_cmd/src/main/java/com/jqk/ffmpeg_cmd/: CmdList.java  FFmpegCmd.java  FFmpegUtil.java  MainActivity.kt  OnVideoProcessListener.java
ffmpeg_cmd/src/main/res/layout/: activity_main.xml
ffmpeg_cmd/src/main/res/values/: strings.xml
ffmpeg_cmd/src/test/java/com/jqk/ffmpeg_cmd/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
